force-app/main/default/objects/Crew__c/Crew__c.object-meta.xml
<CustomObject>
    <label>Crew</label>
    <nameField>
        <label>Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>