force-app/main/default/objects/Crew__c/fields/Crew_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Crew_First_Name__c</fullName>
    <description>First name of the crew.</description>
    <label>Crew First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>