force-app/main/default/objects/Crew__c/fields/Crew_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Crew_Last_Name__c</fullName>
    <description>Last name of the crew.</description>
    <label>Crew Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>