force-app/main/default/objects/Crew__c/fields/Crew_Title__c.field-meta.xml
<CustomField>
    <fullName>Crew_Title__c</fullName>
    <description>Title of the crew such as FC or AP.</description>
    <label>Crew Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>