force-app/main/default/objects/Crew__c/fields/Crew_Type__c.field-meta.xml
<CustomField>
    <fullName>Crew_Type__c</fullName>
    <description>The type of crew.</description>
    <label>Crew Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>