force-app/main/default/objects/Crew__c/fields/Personel_Id__c.field-meta.xml
<CustomField>
    <fullName>Personel_Id__c</fullName>
    <description>The crew’s employee number.</description>
    <externalId>true</externalId>
    <label>Personel Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>