force-app/main/default/objects/Crew__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Rank of the crew such as FC or AP.</description>
    <label>Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>