force-app/main/default/objects/Crew__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Crew_Title__c</columns>
    <columns>Crew_Type__c</columns>
    <columns>Language__c</columns>
    <columns>Personel_Id__c</columns>
    <columns>Rank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>